# insighter_ai

./: docker-compose.yml
admin_bot/: Dockerfile  admin_insight_bot_container.py  bot.py  pyproject.toml  requirements.txt
admin_bot/config/: bot_configs.py
admin_bot/handlers/: command_handler.py  user_handler.py
admin_bot/keyboards/: callback_fabric.py  inline_keyboards.py  main_menu.py
admin_bot/lexicon/: LEXICON_RU.py
insight_bot/: Dockerfile  bot.py  insiht_bot_container.py  log_out_bot.py  pyproject.toml  requirements.txt
insight_bot/api/: gpt.py
insight_bot/config/: bot_configs.py
insight_bot/costume_excepyions/: ai_exceptions.py  config_loading.py  file_read_exceptions.py  format_exceptions.py  path_exceptions.py  system_exceptions.py
insight_bot/costume_filters/: feedback.py  paye.py
insight_bot/enteties/: pipline_data.py  queue_entity.py
insight_bot/handlers/: command_handler.py  docs_handlers.py  payment_handler.py  process_file_handler.py
insight_bot/keyboards/: calback_factories.py  inline_keyboards.py  main_menu.py
insight_bot/lexicon/: LEXICON_RU.py
insight_bot/logging_module/: log_config.py
insight_bot/main_process/: file_format_manager.py  file_manager.py  func_decorators.py  media_file_manager.py  post_ptocessing.py  pre_processing.py  process_pipline.py  system_detection.py  text_invoke.py
insight_bot/midleware/: antiflood.py  attempts.py
insight_bot/server_functions/: connect_to_server.py
insight_bot/services/: service_decorators.py  service_functions.py
progress_bar/: Dockerfile  app.py  progress_bar.py  pyproject.toml  requirements.txt
(+25 files in other folders)
