[tool.poetry]
name = "admin-bot"
version = "0.1.0"
description = ""
authors = ["artemprod <artemprod1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mongoengine = "^0.28.2"
aiogram = "^3.4.1"
redis = "^5.0.3"
environs = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
