[tool.poetry]
name = "insight-bot"
version = "0.1.0"
description = ""
authors = ["artemprod <artemprod1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
docker = "^7.0.0"
environs = "^11.0.0"
ffmpeg-python = "^0.2.0"
langchain = "^0.1.12"
langchain-community = "^0.0.28"
langchain-core = "^0.1.32"
langchain-openai = "^0.0.8"
libmagic = "^1.0"
langsmith = "^0.1.27"
mongoengine = "^0.28.2"
smart-open = "^7.0.1"
tiktoken = "^0.6.0"
nltk = "^3.8.1"
magic-filter = "^1.0.12"
filetype = "^1.2.0"
paramiko = "^3.4.0"
pydub = "^0.25.1"
aiofiles = "^23.2.1"
redis = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
